# distributed-rce-engine

./: .gitignore  Dockerfile  README.md  compose.yaml  debug_test.py  env.example  hack.py  locustfile.py  prometheus.yml  pyproject.toml  requirements.txt  simple_test.py  test.py  test_manual.py
api/: database.py  models.py  server.py
grafana_config/: datasource.yaml
images/: Dockerfile
static/: index.html
worker/: main.py  run_container.py  security.py
